Fix double scroll

--- a/src/app/card-list/card-list.component.scss
+++ b/src/app/card-list/card-list.component.scss
@@ -1,5 +1,6 @@
 .event-container {
-    margin: 0 12.5% 0 12.5%;
+    padding: 0 12.5% 0 12.5%;
+    margin: 0%;
     height: 100vh;
     overflow-y: scroll;
 }
