--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,5 +2,6 @@
 
 body {
     background-image: url('./assets/icons/background.jpg');
-    background-size: cover; 
+    background-size: cover;
+    margin: 0;
 }
